# fff

./: .gitignore  .luarc.json  AGENTS.md  Cargo.toml  Makefile  README.md  _typos.toml  install-mcp.ps1  install-mcp.sh  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: external-tests.yml  lua.yml  nix.yml  panvimdoc.yaml  python.yml  release.yaml  rust.yml
Formula/: fff-mcp.rb
crates/fff-c/: Cargo.toml  cbindgen.toml
crates/fff-c/include/: fff.h
crates/fff-c/src/: accessors.rs  ffi_types.rs  lib.rs  watch.rs
crates/fff-c/tests/: smoke.c
crates/fff-core/: Cargo.toml  README.md  build.rs
crates/fff-core/benches/: bigram_bench.rs  glob_bench.rs  grep_bench.rs  memmem_bench.rs
crates/fff-core/src/: background_watcher.rs  bigram_filter.rs  bigram_query.rs  case_insensitive_memmem.rs  constants.rs  constraints.rs  error.rs  file_picker.rs  frecency.rs  git.rs  git_status_worker.rs  grep.rs  ignore.rs  lib.rs  lmdb.rs  log.rs  parallelism.rs  path_utils.rs  query_tracker.rs  scan.rs  score.rs  shared.rs  simd_path.rs  stable_vec.rs  types.rs
crates/fff-core/src/dbs/: db_healthcheck.rs  frecency.rs  lmdb.rs  mod.rs  query_tracker.rs
crates/fff-core/src/grep/: fuzzy_grep.rs  grep.rs  grep_tests.rs  mod.rs  multi_pattern.rs  prefilter.rs  regex.rs  sink.rs  types.rs
crates/fff-core/src/index/: bigram_filter.rs  bigram_query.rs  candidates.rs  constraints.rs  mod.rs
crates/fff-core/src/simd_string_utils/: case.rs  memmem.rs  mod.rs
crates/fff-core/src/walk/: mod.rs  ripgrep.rs  zlob.rs
crates/fff-core/src/watcher/: background_watcher.rs  mod.rs  watch.rs
crates/fff-core/tests/: bigram_overlay_coherence_test.rs  bigram_overlay_integration.rs  dir_index_consistency_test.rs  drop_during_post_scan.rs  fuzz_file_operations.rs  fuzz_git_watcher_stress.proptest-regressions  fuzz_git_watcher_stress.rs  fuzz_real_repos.proptest-regressions  fuzz_real_repos.rs  grep_integration.rs  grep_overflow_path_constraint_segfault.rs  lmdb_reader_slot_leak.rs  lmdb_stale_lock_deadlock.rs  new_directory_watcher_test.rs  overflow_frecency_segfault.rs  path_separator_constraint_test.rs  real_binary_fixtures.rs  sparse_checkout_test.rs  watch_subscription_test.rs  watcher_stop_under_lock.rs  watcher_thread_lifecycle_test.rs
crates/fff-core/tests/fixtures/binaries/: codex_view.codex
crates/fff-grep/: Cargo.toml
crates/fff-grep/src/: lines.rs
crates/fff-mcp/: Cargo.toml
crates/fff-mcp/src/: healthcheck.rs  main.rs  output.rs  server.rs
crates/fff-nvim/: Cargo.toml
crates/fff-nvim/benches/: fuzzy_search_bench.rs  grep_bench.rs  indexing_and_search.rs  post_scan_bench.rs  query_tracker_bench.rs  scan_bench.rs
crates/fff-nvim/src/: lib.rs  lua_types.rs  path_shortening.rs  user_config.rs
crates/fff-python/: Cargo.toml
crates/fff-python/src/: conversions.rs  finder.rs  lib.rs  types.rs  watch.rs
crates/fff-query-parser/: Cargo.toml
crates/fff-query-parser/src/: config.rs  constraints.rs  lib.rs  parser.rs
doc/: fff.nvim.txt
lua/fff/: combo_renderer.lua  conf.lua  core.lua  download.lua  file_renderer.lua  fuzzy.lua  health.lua  highlights.lua  layout.lua  list_renderer.lua  list_separator.lua  location_utils.lua  main.lua  picker_ui.lua  scrollbar.lua  utils.lua
lua/fff/file_picker/: file_info.lua  preview.lua
lua/fff/grep/: grep_renderer.lua
lua/fff/picker_ui/: file_renderer.lua  grep_renderer.lua  layout_manager.lua  list_renderer.lua  (+3 more)
plugin/: fff.lua
scripts/: determine-version.lua  diagnose_lockmdb.py  release.sh
tests/: fresh_db_open_test.lua  grep_jump_file_spec.lua  minimal_init.lua  on_submit_callback_spec.lua  picker_dir_resolution_spec.lua  picker_ui_snap.lua  programmatic_search_spec.lua  test_cd_during_post_scan.lua  utils.lua  version_spec.lua
tests/screenshots/: tests-picker_ui_snap.lua---combo---boost_bottom  tests-picker_ui_snap.lua---combo---boost_top  tests-picker_ui_snap.lua---debug---file_info_panel  tests-picker_ui_snap.lua---debug---file_info_panel_bottom  tests-picker_ui_snap.lua---debug---file_info_panel_top  tests-picker_ui_snap.lua---debug_narrow---file_info_panel_bottom  tests-picker_ui_snap.lua---debug_narrow---file_info_panel_top  tests-picker_ui_snap.lua---debug_wide---file_info_panel_bottom  tests-picker_ui_snap.lua---debug_wide---file_info_panel_top  tests-picker_ui_snap.lua---default---cursor_second_item_bottom  tests-picker_ui_snap.lua---default---cursor_second_item_top  tests-picker_ui_snap.lua---default---empty_bottom  tests-picker_ui_snap.lua---default---empty_top  tests-picker_ui_snap.lua---default---no_results_bottom  tests-picker_ui_snap.lua---default---no_results_top  tests-picker_ui_snap.lua---default---query_main_bottom  tests-picker_ui_snap.lua---default---query_main_top  tests-picker_ui_snap.lua---dir_position---right  tests-picker_ui_snap.lua---dir_position_right_overflow---narrow  tests-picker_ui_snap.lua---narrow---cursor_second_item  tests-picker_ui_snap.lua---narrow---cursor_second_item_bottom  tests-picker_ui_snap.lua---narrow---cursor_second_item_top  tests-picker_ui_snap.lua---narrow---empty_bottom  tests-picker_ui_snap.lua---narrow---empty_top  tests-picker_ui_snap.lua---narrow---no_results_bottom  tests-picker_ui_snap.lua---narrow---no_results_top  tests-picker_ui_snap.lua---narrow---query_main_bottom  tests-picker_ui_snap.lua---narrow---query_main_top  tests-picker_ui_snap.lua---scrollbar---next_page  tests-picker_ui_snap.lua---scrollbar---next_page_bottom  tests-picker_ui_snap.lua---scrollbar---next_page_top  tests-picker_ui_snap.lua---wide---cursor_second_item_bottom  tests-picker_ui_snap.lua---wide---cursor_second_item_top  tests-picker_ui_snap.lua---wide---empty_bottom  tests-picker_ui_snap.lua---wide---empty_top  tests-picker_ui_snap.lua---wide---no_results_bottom  tests-picker_ui_snap.lua---wide---no_results_top  tests-picker_ui_snap.lua---wide---query_main_bottom  tests-picker_ui_snap.lua---wide---query_main_top  tests-picker_ui_snap.lua---xwide---cursor_second_item_bottom  (+6 more)
tests/snapshot/: fixture.lua
(+1 files in other folders)
