[package]
name = "fff-c"
version = "0.8.1"
edition = "2024"
description = "Raw C api of FFF file finder"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[features]
default = []
zlob = ["fff/zlob"]

[dependencies]
git2.workspace = true

fff = { package = "fff-search", path = "../fff-core" , version = "0.8.1" }
fff-query-parser = { path = "../fff-query-parser" , version = "0.8.1" }
serde_json = "1.0"
