[package]
name = "fff-c"
version = "0.9.6"
edition = "2024"
description = "Raw C api of FFF file finder"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[features]
default = ["ripgrep"] # use ripgrep base crates to avoid requiring zig for rust crate
ripgrep = ["fff/ripgrep", "fff-query-parser/ripgrep"]
zlob = ["fff/zlob", "fff-query-parser/zlob"]

[dependencies]
git2.workspace = true

fff = { package = "fff-search", path = "../fff-core", version = "0.9.6", default-features = false }
fff-query-parser = { path = "../fff-query-parser", version = "0.9.6", default-features = false }
serde_json = "1.0"
