[package]
name = "fff-nvim"
version = "0.7.2"
edition = "2024"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = []
zlob = ["fff/zlob"]

[[bin]]
name = "test_watcher"
path = "src/bin/test_watcher.rs"

[[bin]]
name = "jemalloc_profile"
path = "src/bin/jemalloc_profile.rs"

[[bin]]
name = "search_profiler"
path = "src/bin/search_profiler.rs"

[[bin]]
name = "bench_search_only"
path = "src/bin/bench_search_only.rs"

[[bin]]
name = "grep_profiler"
path = "src/bin/grep_profiler.rs"

[[bin]]
name = "grep_vs_rg"
path = "src/bin/grep_vs_rg.rs"

[[bin]]
name = "bench_grep_query"
path = "src/bin/bench_grep_query.rs"

[[bin]]
name = "fuzzy_grep_test"
path = "src/bin/fuzzy_grep_test.rs"

[[bin]]
name = "test_memory_leak"
path = "src/bin/test_memory_leak.rs"

[[bin]]
name = "bench_ci_memmem"
path = "src/bin/bench_ci_memmem.rs"

[[bin]]
name = "bench_lmdb_parallel"
path = "src/bin/bench_lmdb_parallel.rs"

[dependencies]
# Workspace dependencies
ahash = { workspace = true }
tracing = { workspace = true }

# Local crates
fff = { package = "fff-search", path = "../fff-core", version = "0.7.2", features = [
	"mimalloc-collect",
] }
fff-query-parser = { path = "../fff-query-parser", version = "0.7.2" }
chrono = { version = "0.4", features = ["serde"] }
ctrlc = "3.4.2"
git2 = { workspace = true }
ignore = "0.4.22"
mimalloc = { version = "0.1.47", features = ["local_dynamic_tls"] }
mlua = { version = "0.11.1", features = ["module", "luajit"] }
once_cell = "1.20.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = { version = "0.8", features = ["small_rng"] }

[[bench]]
name = "fuzzy_search"
path = "benches/fuzzy_search_bench.rs"
harness = false

[[bench]]
name = "grep_bench"
path = "benches/grep_bench.rs"
harness = false

[[bench]]
name = "query_tracker"
path = "benches/query_tracker_bench.rs"
harness = false

[[bench]]
name = "scan"
path = "benches/scan_bench.rs"
harness = false
