[package]
name = "fff-python"
version = "0.9.4"
edition = "2024"

[lib]
name = "fff_python"
crate-type = ["cdylib"]

[features]
default = []
zlob = ["fff/zlob"]

[dependencies]
fff = { package = "fff-search", path = "../fff-core", version = "0.9.4" }
fff-query-parser = { path = "../fff-query-parser", version = "0.9.4" }
git2 = { workspace = true }
pyo3 = { version = "0.24.0", features = ["extension-module", "abi3-py310"] }
