[package]
name = "fff-python"
version = "0.10.0"
edition = "2024"

[lints]
workspace = true

[lib]
name = "fff_python"
crate-type = ["cdylib"]

[features]
# Pure-Rust walker by default; zlob is opt-in (needs Zig).
default = ["ripgrep"]
ripgrep = ["fff/ripgrep", "fff-query-parser/ripgrep"]
zlob = ["fff/zlob", "fff-query-parser/zlob"]

[dependencies]
fff = { package = "fff-search", path = "../fff-core", version = "0.10.0", default-features = false }
fff-query-parser = { path = "../fff-query-parser", version = "0.10.0", default-features = false }
git2 = { workspace = true }
pyo3 = { version = "0.24.0", features = ["extension-module", "abi3-py310"] }
