[package]
name = "fff-query-parser"
version = "0.10.0"
edition = "2024"
description = "Query parser for fff file finder - includes specific syntax for various constraints like globs, extensions, regex etc"
license = "MIT"
authors = ["Dmitriy Kovalenko <dmtr.kovalenko@outlok.com>"]

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[features]
# `ripgrep` = pure-Rust glob detection (default). `zlob` overrides it when set.
default = ["ripgrep"]
ripgrep = []
zlob = ["dep:zlob"]

[dependencies]
zlob = { workspace = true, optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parse_bench"
harness = false
